--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -214,66 +214,6 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="wrapper">
-        <div class="video-timeline">
-          <div class="progress-area">
-            <span>00:00</span>
-            <div class="progress-bar"></div>
-          </div>
-        </div>
-        <ul class="video-controls">
-          <li class="options left">
-            <button class="volume">
-              <i class="fa-solid fa-volume-high"></i>
-            </button>
-            <input type="range" min="0" max="1" step="any" />
-            <div class="video-timer">
-              <p class="current-time">00:00</p>
-              <p class="separator">/</p>
-              <p class="video-duration">00:00</p>
-            </div>
-          </li>
-          <li class="options center">
-            <button class="skip-backward">
-              <i class="fa-solid fa-backward-step"></i>
-            </button>
-            <button class="play-pause">
-              <i class="fa-solid fa-play"></i>
-            </button>
-            <button class="skip-forward">
-              <i class="fa-solid fa-forward-step"></i>
-            </button>
-          </li>
-          <li class="options right">
-            <div class="playback-content">
-              <button class="playback-speed">
-                <span class="material-symbols-rounded">
-                  slow_motion_video
-                </span>
-              </button>
-              <ul class="speed-options">
-                <li data-speed="2">2x</li>
-                <li data-speed="1.5">1.5x</li>
-                <li data-speed="1" class="active">Normal</li>
-                <li data-speed="0.75">0.75x</li>
-                <li data-speed="0.5">0.5x</li>
-              </ul>
-            </div>
-            <button class="pic-in-pic">
-              <span class="material-symbols-rounded">
-                picture_in_picture_alt
-              </span>
-            </button>
-            <button class="fullscreen">
-              <i class="fa-solid fa-expand"></i>
-            </button>
-          </li>
-        </ul>
-      </div>
-      <video src="/videos/Jah-Khalib–Доча.mp4"></video>
-    </div>
-
     <!-- <i class="fa-solid fa-compress"></i>
   <i class="fa-solid fa-pause"></i>
 
@@ -288,40 +228,278 @@
   <i class="fa-solid fa-ellipsis-vertical"></i> -->
 
     <!-- Fixed Navbar -->
-    <!-- <nav class="fixed top-0 left-0 w-full z-[999] p-4 border-b border-gray-300 bg-white">
-    <div class="flex justify-between items-center">
-      <div>Navbar</div>
-      <div>
+    <nav
+      class="fixed top-0 left-0 w-full z-[999] p-4 border-b border-gray-300 bg-white"
+    >
+      <div class="flex justify-between items-center">
+        <div>Navbar</div>
+        <div></div>
+        <ul class="flex gap-4">
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 2</a></li>
+          <li><a href="#">Link 3</a></li>
+        </ul>
       </div>
-      <ul class="flex gap-4">
-        <li><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
-        <li><a href="#">Link 3</a></li>
-      </ul>
-    </div>
-  </nav> -->
+    </nav>
 
     <!-- open -->
-    <!-- <div id="page-content" class="p-4">
-    <div class="flex justify-center items-center h-[60vh]">
-      <button id="open">Open Modal</button>
+    <div id="page-content" class="p-4">
+      <div class="flex justify-center items-center h-[60vh]">
+        <button id="open">Open Modal</button>
+      </div>
     </div>
-  </div> -->
 
     <!-- Modal -->
-    <!-- <div id="modal_overlay"
-    class="fixed inset-0 z-[100] flex items-center justify-center bg-black/30 opacity-0 pointer-events-none transition-opacity duration-300">
+    <div
+      id="modal_overlay"
+      class="fixed inset-0 z-[100] flex items-center justify-center bg-black/30 opacity-0 pointer-events-none transition-opacity duration-300"
+    >
+      <div class="bg-white p-4 w-[90%] max-w-md">
+        <div>
+          <p>Modal matni: bu yerda nimadir bo‘ladi.</p>
+        </div>
 
-    <div class="bg-white p-4 w-[90%] max-w-md">
-      <div>
-        <p>Modal matni: bu yerda nimadir bo‘ladi.</p>
-      </div>
-      <div class="text-right mt-4">
-        <button id="close">Yopish</button>
+        <div class="container">
+          <div class="wrapper">
+            <div class="video-timeline">
+              <div class="progress-area">
+                <span>00:00</span>
+                <div class="progress-bar"></div>
+              </div>
+            </div>
+            <ul class="video-controls">
+              <li class="options left">
+                <button class="volume">
+                  <i class="fa-solid fa-volume-high"></i>
+                </button>
+                <input type="range" min="0" max="1" step="any" />
+                <div class="video-timer">
+                  <p class="current-time">00:00</p>
+                  <p class="separator">/</p>
+                  <p class="video-duration">00:00</p>
+                </div>
+              </li>
+              <li class="options center">
+                <button class="skip-backward">
+                  <i class="fa-solid fa-backward-step"></i>
+                </button>
+                <button class="play-pause">
+                  <i class="fa-solid fa-play"></i>
+                </button>
+                <button class="skip-forward">
+                  <i class="fa-solid fa-forward-step"></i>
+                </button>
+              </li>
+              <li class="options right">
+                <div class="playback-content">
+                  <button class="playback-speed">
+                    <span class="material-symbols-rounded">
+                      slow_motion_video
+                    </span>
+                  </button>
+                  <ul class="speed-options">
+                    <li data-speed="2">2x</li>
+                    <li data-speed="1.5">1.5x</li>
+                    <li data-speed="1" class="active">Normal</li>
+                    <li data-speed="0.75">0.75x</li>
+                    <li data-speed="0.5">0.5x</li>
+                  </ul>
+                </div>
+                <button class="pic-in-pic">
+                  <span class="material-symbols-rounded">
+                    picture_in_picture_alt
+                  </span>
+                </button>
+                <button class="fullscreen">
+                  <i class="fa-solid fa-expand"></i>
+                </button>
+              </li>
+            </ul>
+          </div>
+          <video src="/videos/Jah-Khalib–Доча.mp4"></video>
+        </div>
+
+        <div class="text-right mt-4">
+          <button id="close">Yopish</button>
+        </div>
       </div>
     </div>
-  </div> -->
 
-    <script src="/app.js"></script>
+    <script>
+      const open = document.getElementById("open");
+      const close = document.getElementById("close");
+      const modal = document.getElementById("modal_overlay");
+      const body = document.body;
+
+      open.addEventListener("click", () => {
+        modal.classList.remove("opacity-0", "pointer-events-none");
+        modal.classList.add("opacity-100", "pointer-events-auto");
+        body.classList.add("overflow-hidden"); // Scroll ni o'chirish
+      });
+
+      close.addEventListener("click", () => {
+        modal.classList.remove("opacity-100", "pointer-events-auto");
+        modal.classList.add("opacity-0", "pointer-events-none");
+        body.classList.remove("overflow-hidden"); // Scroll ni tiklash
+      });
+
+      //
+      const container = document.querySelector(".container"),
+        mainVideo = container.querySelector("video"),
+        videoTimeline = container.querySelector(".video-timeline"),
+        progressBar = container.querySelector(".progress-bar"),
+        volumeBtn = container.querySelector(".volume i"),
+        volumeSlider = container.querySelector(".left input"),
+        currentVidTime = container.querySelector(".current-time"),
+        videoDuration = container.querySelector(".video-duration"),
+        skipBackward = container.querySelector(".skip-backward i"),
+        skipForward = container.querySelector(".skip-forward i"),
+        playPauseBtn = container.querySelector(".play-pause i"),
+        speedBtn = container.querySelector(".playback-speed span"),
+        speedOptions = container.querySelector(".speed-options"),
+        PicInPicBtn = container.querySelector(".pic-in-pic span"),
+        fullscreenBtn = container.querySelector(".fullscreen i");
+
+      const formatTime = (time) => {
+        let seconds = Math.floor(time % 60),
+          minutes = Math.floor(time / 60) % 60,
+          hours = Math.floor(time / 3600);
+
+        seconds = seconds < 10 ? `0${seconds}` : seconds;
+        minutes = minutes < 10 ? `0${minutes}` : minutes;
+        hours = hours < 10 ? `0${hours}` : hours;
+
+        if (hours == 0) {
+          return `${minutes}:${seconds}`;
+        }
+        return `${hours}:${minutes}:${seconds}`;
+      };
+
+      mainVideo.addEventListener("timeupdate", (e) => {
+        let { currentTime, duration } = e.target;
+        let percent = (currentTime / duration) * 100;
+        progressBar.style.width = `${percent}%`;
+        currentVidTime.innerText = formatTime(currentTime);
+      });
+
+      mainVideo.addEventListener("loadedmetadata", (e) => {
+        videoDuration.innerText = formatTime(e.target.duration);
+        volumeSlider.value = mainVideo.volume;
+      });
+
+      videoTimeline.addEventListener("click", (e) => {
+        let timelineWidth = videoTimeline.clientWidth;
+        mainVideo.currentTime =
+          (e.offsetX / timelineWidth) * mainVideo.duration;
+      });
+
+      const draggableProgressBar = (e) => {
+        let timelineWidth = videoTimeline.clientWidth;
+        progressBar.style.width = `${e.offsetX}px`;
+        mainVideo.currentTime =
+          (e.offsetX / timelineWidth) * mainVideo.duration;
+        currentVidTime.innerText = formatTime(mainVideo.currentTime);
+      };
+
+      videoTimeline.addEventListener("mousedown", () => {
+        videoTimeline.addEventListener("mousemove", draggableProgressBar);
+      });
+
+      container.addEventListener("mouseup", () => {
+        videoTimeline.removeEventListener("mousemove", draggableProgressBar);
+      });
+
+      videoTimeline.addEventListener("mousemove", (e) => {
+        const progressTime = videoTimeline.querySelector("span");
+        let offsetX = e.offsetX;
+        progressTime.style.left = `${offsetX}px`;
+        let timelineWidth = videoTimeline.clientWidth;
+        let percent = (e.offsetX / timelineWidth) * mainVideo.duration;
+        progressTime.innerText = formatTime(percent);
+      });
+
+      volumeBtn.addEventListener("click", () => {
+        if (!volumeBtn.classList.contains("fa-volume-high")) {
+          mainVideo.volume = 0.5;
+          volumeBtn.classList.replace("fa-volume-xmark", "fa-volume-high");
+        } else {
+          mainVideo.volume = 0.0;
+          volumeBtn.classList.replace("fa-volume-high", "fa-volume-xmark");
+        }
+      });
+
+      volumeSlider.addEventListener("input", (e) => {
+        mainVideo.volume = e.target.value;
+        if (e.target.value == 0) {
+          volumeBtn.classList.replace("fa-volume-high", "fa-volume-xmark");
+        } else {
+          volumeBtn.classList.replace("fa-volume-xmark", "fa-volume-high");
+        }
+      });
+
+      speedBtn.addEventListener("click", (e) => {
+        e.stopPropagation();
+        speedOptions.classList.toggle("show");
+      });
+
+      speedOptions.querySelectorAll("li").forEach((option) => {
+        option.addEventListener("click", () => {
+          mainVideo.playbackRate = parseFloat(option.dataset.speed);
+
+          const currentActive = speedOptions.querySelector(".active");
+          if (currentActive) currentActive.classList.remove("active");
+
+          option.classList.add("active");
+          speedOptions.classList.remove("show");
+        });
+      });
+
+      document.addEventListener("click", (e) => {
+        if (!container.contains(e.target)) {
+          speedOptions.classList.remove("show");
+        }
+      });
+
+      PicInPicBtn.addEventListener("click", () => {
+        mainVideo.requestPictureInPicture();
+      });
+
+      fullscreenBtn.addEventListener("click", () => {
+        // container.classList.toggle("fullscreen");
+        if (document.fullscreenElement) {
+          document.exitFullscreen().then(() => {
+            fullscreenBtn.classList.replace("fa-compress", "fa-expand");
+            container.classList.remove("fullscreen");
+          });
+        } else {
+          container.requestFullscreen().then(() => {
+            fullscreenBtn.classList.replace("fa-expand", "fa-compress");
+            container.classList.add("fullscreen");
+          });
+        }
+      });
+
+      skipBackward.addEventListener("click", () => {
+        mainVideo.currentTime -= 5;
+      });
+
+      skipForward.addEventListener("click", () => {
+        mainVideo.currentTime += 5;
+      });
+
+      playPauseBtn.addEventListener("click", () => {
+        mainVideo.paused ? mainVideo.play() : mainVideo.pause();
+      });
+
+      mainVideo.addEventListener("play", () => {
+        playPauseBtn.classList.replace("fa-play", "fa-pause");
+      });
+
+      mainVideo.addEventListener("pause", () => {
+        playPauseBtn.classList.replace("fa-pause", "fa-play");
+      });
+    </script>
+
+    <!-- <script src="/app.js"></script> -->
   </body>
 </html>
